samples/SEMANTIC_ERROR/return_empty_nonvoid.php
<?php
declare(strict_types=1);
function foo(int $i) : int
{
    //ERROR[6]
    return;
}